# master-thesis-fl-poisoning-simulated-annealing

./: .gitignore  DataPreprocessing.ipynb  README.md  SimulatedAnnealingClass.py  centralized_baseline.py  graphs.ipynb  kmax_log.csv  pyproject.toml  sa_selective_backdoor_results.txt  sa_selective_backdoor_with_defense_results.txt  sequence_to_poison.csv  setup_client_node.sh  setup_server_node.sh  start_local_simulation.sh  upload_on_nodes.sh
Baseline Code/: client_app.py  task.py
BaselineCode/: server_app.py
LSTMfederated/: __init__.py  client_app.py  server_app.py  task.py
SequencesBackdoorSA/: high_pollution_sequences.csv  high_pollution_targets.csv  low_pollution_sequences.csv  low_pollution_targets.csv
aotizhongxin/: aotizhongxin_test_scaled.csv
changping/: changping_test_scaled.csv
dingling/: dingling_test_scaled.csv
dongsi/: dongsi_test_scaled.csv
guanyuan/: guanyuan_test_scaled.csv
